# internal/server/server_utils/context.go
@@ -4,6 +4,7 @@ import (
 	"context"
 
 	"com.raunlo.checklist/internal/core/domain"
+	"com.raunlo.checklist/internal/server/auth"
 	"github.com/gin-gonic/gin"
 )
 
@@ -24,6 +25,13 @@ func CreateContext(ginContext context.Context) context.Context {
 		return ctx
 	} else {
 		ctx = context.WithValue(ctx, domain.ClientIdContextKey, clientId)
+		ctx = createContextWithUserId(castedGinContext, ctx)
 		return ctx
 	}
+}
+
+func createContextWithUserId(ginContext *gin.Context, ctx context.Context) context.Context {
+	userId, _ := auth.ExtractUserIdFromGinContext(ginContext)
+	ctx = context.WithValue(ctx, domain.UserIdContextKey, userId)
+	return ctx
 }
